--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="/build/tailwind.css" />
+  <link rel="stylesheet" href="build/tailwind.css" />
   <title>Stardustrose</title>
 </head>
 <body class="antialiased">
