--- a/index.html
+++ b/index.html
@@ -59,10 +59,8 @@
   Your browser does not support the audio element.
   </audio>
 
-  <script
-    src="https://code.jquery.com/jquery-3.5.1.min.js"
-    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-    crossorigin="anonymous"></script>
+<script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+
   <script src="starlight.js">
 
 </body>
