--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="header_stars">
             <img src="stars.png" alt="decor stars">
         </div>
-        <div class="header_foxes">
+        <div class="header_foxes hidden lg:inline-block">
             <img src="foxes.png" alt="astronaut foxes">
         </div>
         <section class="introduction">
