--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </svg>
             <div class="introduction_blurb container flex items-center justify-center text-center flex-col">
                 <img class="introduction_blurb_star mb-2" src="https://cdn1.iconfinder.com/data/icons/filled-line-christmas-icons/75/_star-512.png" alt="gold star">
-                <p>Greetings! I'm an aspiring web designer based in North Carolina. Designing allows me to create a world where I can combine my passion for art and technology.</p>
+                <p>Greetings! I'm an aspiring web designer based in North Carolina.</p>
             </div>
         </section>
         <section class="section_work">
