--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
                 <nav class="main-nav">
                     <ul>
                         <li>
-                            <a href="#">Home</a> /
+                            <a href="#">Home</a> |
                         </li>
                         <li>
-                            <a href="#">About</a> /
+                            <a href="#">About</a> |
                         </li>
                         <li>
-                            <a href="#">Work</a> /
+                            <a href="#">Work</a> |
                         </li>
                         <li>
                             <a href="#">Contact</a>
