--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png"/>
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"/>
-        <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;800&display=swap" rel="stylesheet">
+        <!-- <link href="https://fonts.googleapis.com/css2?family=Rye&display=swap" rel="stylesheet"> -->
+        <link href="https://fonts.googleapis.com/css2?family=Reenie+Beanie&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="/build/tailwind.css"/>
-        <title>Stardust rose</title>
+        <title>stardustrose</title>
     </head>
     <body class="antialiased">
         <header class="main-header starlight flex flex-col items-center justify-center">
@@ -16,7 +18,7 @@
                 <h1>stardustrose</h1>
             </div>
             <div class="main-header_subtitle text-white tracking-widest uppercase">
-                <nav class="main-nav">
+                <!-- <nav class="main-nav">
                     <ul>
                         <li>
                             <a href="#">Home</a> |
@@ -31,7 +33,7 @@
                             <a href="#">Contact</a>
                         </li>
                     </ul>
-                </nav>
+                </nav> -->
             </div>
         </header>
         <div class="header_stars">
@@ -46,7 +48,7 @@
             </svg>
             <div class="introduction_blurb container flex items-center justify-center text-center flex-col">
                 <img class="introduction_blurb_star mb-2" src="https://cdn1.iconfinder.com/data/icons/filled-line-christmas-icons/75/_star-512.png" alt="gold star">
-                <p>Greetings! I'm an aspiring web designer based in North Carolina.</p>
+                <p><button class="transition duration-500 ease-in-out">view my work</button></p>
             </div>
         </section>
         <section class="section_work">
@@ -54,6 +56,9 @@
                 <path fill="#0d084c" fill-opacity="1" d="M0,128L1440,64L1440,0L0,0Z"></path>
             </svg>
             <!-- <h2 class="font-semibold tracking-widest text-6xl">Work</h2> -->
+
+            <h3 class="text-5xl nunito-bold">this is a heading</h3>
+            <p class="text-2xl nunito-regular">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti eius, iusto maiores ea eos consequuntur at quos tenetur laborum dolorem, excepturi, similique culpa illum dignissimos in. Sint ipsa sunt fugiat.</p>
         </section>
         <audio controls>
             <source src="horse.ogg" type="audio/ogg">
